--- a/chargen.html
+++ b/chargen.html
@@ -151,5 +151,17 @@
 		<p>Open Doors: <label id="opDrs"></label></p>
 		<p>Bend Bars: <label id="bndBrs"></label>%</p>
 	</div>
+	<div class="roller">
+		<p>Reaction Adj: <label id="rctAdj"></label></p>
+		<p>Missile Attack Adj: <label id="mislAdj"></label></p>
+		<p>Defensive Adj: <label id="defAdj"></label></p>
+	</div>
+	<div class="roller">
+		<p>HP Adj: <label id="hpAdj"></label></p>
+		<p>System Shock: <label id="sysShk"></label></p>
+		<p>Res Survival: <label id="resSurv"></label></p>
+		<p>Poison Save: <label id="posSv"></label></p>
+		<p>Regeneration: <label id="regen"></label></p>
+	</div>
    </body>
 </html>
