int wis and char

--- a/chargen.html
+++ b/chargen.html
@@ -163,5 +163,23 @@
 		<p>Poison Save: <label id="posSv"></label></p>
 		<p>Regeneration: <label id="regen"></label></p>
 	</div>
+	<div class="roller">
+		<p>No. Lang: <label id="noOfLang"></label></p>
+		<p>Spell Level: <label id="spellLvl"></label></p>
+		<p>Chance to learn: <label id="chnLearn"></label></p>
+		<p>Max spells/level: <label id="maxSplPerLvl"></label></p>
+		<p>Spell Immune: <label id="splImun"></label></p>
+	</div>
+	<div class="roller">
+		<p>Magic Def Bonus: <label id="magDefAdj"></label></p>
+		<p>Bonus Spells: <label id="BonusSp"></label></p>
+		<p>Chance Spell Fail: <label id="chnFail"></label></p>
+		<p>Spell Immune: <label id="splImmune"></label></p>
+	</div>
+	<div class="roller">
+		<p>Max Henchmen: <label id="mxHench"></label></p>
+		<p>Loyalty Base: <label id="loyaltyBs"></label></p>
+		<p>Reaction Adj: <label id="ReactAdj"></label></p>
+	</div>
    </body>
 </html>
