--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
    <head>
+	<meta charset="utf-8"/>
       <title>Character generator</title>
 	  <link rel="stylesheet" type="text/css" href="styles.css" />
 	  <script type="text/javascript" src="generator.js"></script>
