beginning class limits

--- a/index.html
+++ b/index.html
@@ -109,14 +109,15 @@
 		</select>
 		<select id="class" onchange="setClass(this)">
 			<option></option>
-			<option>fighter</option>
-			<option>thief</option>
-			<option>cleric</option>
-			<option>mage</option>
-			<option>bard</option>
-			<option>paladin</option>
-			<option>ranger</option>
-			<option>druid</option>
+			<option value="0">fighter</option>
+			<option value="1">thief</option>
+			<option value="2">cleric</option>
+			<option value="3">mage</option>
+			<option value="4">bard</option>
+			<option value="5">paladin</option>
+			<option value="6">ranger</option>
+			<option value="7">druid</option>
+			<option value="8">illusionist</option>
 		</select>		
 		<select id="lvl" onchange="setLevel(this)">
 			<option></option>
