drop down recognises race

--- a/index.html
+++ b/index.html
@@ -109,15 +109,15 @@
 		</select>
 		<select id="class" onchange="setClass(this)">
 			<option></option>
-			<option value="0">fighter</option>
-			<option value="1">thief</option>
-			<option value="2">cleric</option>
-			<option value="3">mage</option>
-			<option value="4">bard</option>
-			<option value="5">paladin</option>
-			<option value="6">ranger</option>
-			<option value="7">druid</option>
-			<option value="8">illusionist</option>
+			<option value="0" disabled>fighter</option>
+			<option value="1" disabled>thief</option>
+			<option value="2" disabled>cleric</option>
+			<option value="3" disabled>mage</option>
+			<option value="4" disabled>bard</option>
+			<option value="5" disabled>paladin</option>
+			<option value="6" disabled>ranger</option>
+			<option value="7" disabled>druid</option>
+			<option value="8" disabled>illusionist</option>
 		</select>		
 		<select id="lvl" onchange="setLevel(this)">
 			<option></option>
