--- a/index.html
+++ b/index.html
@@ -109,15 +109,15 @@
 		</select>
 		<select id="class" onchange="setClass(this)">
 			<option></option>
-			<option value="0" disabled>fighter</option>
-			<option value="1" disabled>thief</option>
-			<option value="2" disabled>cleric</option>
-			<option value="3" disabled>mage</option>
-			<option value="4" disabled>bard</option>
-			<option value="5" disabled>paladin</option>
-			<option value="6" disabled>ranger</option>
-			<option value="7" disabled>druid</option>
-			<option value="8" disabled>illusionist</option>
+			<option value="fighter" disabled>fighter</option>
+			<option value="thief" disabled>thief</option>
+			<option value="cleric" disabled>cleric</option>
+			<option value="mage" disabled>mage</option>
+			<option value="bard" disabled>bard</option>
+			<option value="paladin" disabled>paladin</option>
+			<option value="ranger" disabled>ranger</option>
+			<option value="druid" disabled>druid</option>
+			<option value="illusionist" disabled>illusionist</option>
 		</select>		
 		<select id="lvl" onchange="setLevel(this)">
 			<option></option>
