--- a/index.html
+++ b/index.html
@@ -143,8 +143,8 @@
 			<option>20</option>
 		</select>
 		<p>HP <label id="hp"></label></p>
-		<p>AC <label id="ac">10</label></p>
-		<p>THACO <label id="thaco">20</label></p>
+		<p>AC <label id="ac"></label></p>
+		<p>THACO <label id="thaco"></label></p>
 	</div>
 	<div class="roller">
 		<p>Weight Allowance: <label id="wghtAllow"></label></p>
