--- a/index.html
+++ b/index.html
@@ -182,5 +182,12 @@
 		<p>Loyalty Base: <label id="loyaltyBs"></label></p>
 		<p>Reaction Adj: <label id="ReactAdj"></label></p>
 	</div>
+	<div class="roller">
+		<p>Poison/Paralysis: <label id="para"></label></p>
+		<p>Rod/wand/staff: <label id="rod"></label></p>
+		<p>Polymorph: <label id="poly"></label></p>
+		<p>Breath weapon: <label id="breath"></label></p>
+		<p>Spell: <label id="spell"></label></p>
+	</div>
    </body>
 </html>
