roll 3d6 and spinner

--- a/index.html
+++ b/index.html
@@ -155,6 +155,9 @@
 		<p>HP <label id="hp"></label></p>
 		<p>THACO <label id="thaco"></label></p>
 	</div>
+	<div id="spinner">
+		<div class="loadingspinner"></div>
+	</div>
 	<div class="roller">
 		<p>Weight Allowance: <label id="wghtAllow"></label></p>
 		<p>Max Press: <label id="MxPres"></label></p>
