--- a/index.html
+++ b/index.html
@@ -15,7 +15,10 @@
 		<label for="fourd6">Four D6 drop the lowest</label>
 		<br>
 		<input type="radio" id="threed6" name="rolltype" value="3*D6">
-		<label for="threed6">Three D6</label>		
+		<label for="threed6">Three D6</label>
+		<br>
+		<input type="radio" id="none" name="rolltype" value="none" onchange="noRollType(this)">
+		<label for="none">Enter values manually</label>	
 	</div>
 	<div class="roller">
 		<div>
@@ -30,7 +33,7 @@
 				<option value="chr">charisma</option>
 			</select>
 			<label for="str">Strength</label>
-			<input type="number" id="str" readonly />
+			<input type="number" id="str" min="3" max="18" readonly />
 			<label id="percent"></label>
 		</div>
 		<div>
@@ -45,7 +48,7 @@
 				<option value="chr">charisma</option>
 			</select>
 			<label for="str">Dexterity</label>
-			<input type="number" id="dex" readonly />
+			<input type="number" id="dex" min="3" max="18" readonly />
 		</div>
 		<div>
 			<input type="number" id="three" readonly />
@@ -59,7 +62,7 @@
 				<option value="chr">charisma</option>
 			</select>
 			<label for="str">Constitution</label>
-			<input type="number" id="con" readonly />
+			<input type="number" id="con" min="3" max="18" readonly />
 		</div>
 		<div>
 			<input type="number" id="four" readonly />
@@ -73,7 +76,7 @@
 				<option value="chr">charisma</option>
 			</select>
 			<label for="str">Intelligence</label>
-			<input type="number" id="int" readonly />
+			<input type="number" id="int" min="3" max="18" readonly />
 		</div>
 		<div>
 			<input type="number" id="five" readonly />
@@ -87,7 +90,7 @@
 				<option value="chr">charisma</option>
 			</select>
 			<label for="str">Wisdom</label>
-			<input type="number" id="wis" readonly />
+			<input type="number" id="wis" min="3" max="18" readonly />
 		</div>
 		<div>
 			<input type="number" id="six" readonly />
@@ -101,7 +104,7 @@
 				<option value="chr">charisma</option>
 			</select>
 			<label for="str">Charisma</label>
-			<input type="number" id="chr" readonly />
+			<input type="number" id="chr" min="3" max="18" readonly />
 		</div>
 		<div>
 			<input type="button" id="roll" value="Roll dem bones" />
