--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<meta charset="utf-8"/>
       <title>Character generator</title>
 	  <link rel="stylesheet" type="text/css" href="styles.css" />
-	  <script type="text/javascript" src="generator.js"></script>
+	  <script type="module" src="dist/main.js"></script>
    </head>
    <body>
 	<div class="title">
